--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>layout 后台大布局 - Layui</title>
+  <title>layout 后台大布局 - 亚亚</title>
 
   <!-- 判断本地存储是否有token信息: 解决index页面一闪而过问题 -->
   <script>
@@ -73,8 +73,9 @@
             <dl class="layui-nav-child">
               <dd><a href="/user/user_info.html" target="layUiBody"><i class="layui-icon layui-icon-app"></i>基本资料</a>
               </dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+              <dd><a href="/user/user_avatar.html" target="layUiBody"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+              <dd><a href="/user/user_pwd.html" target="layUiBody"><i class="layui-icon layui-icon-app"></i>重置密码</a>
+              </dd>
             </dl>
           </li>
         </ul>
@@ -85,7 +86,7 @@
       <!-- 内容主体区域 -->
       <!-- <div style="padding: 15px;">内容主体区域</div> -->
       <!-- <iframe name="layUiBody" src="/home/dashboard.html"></iframe> -->
-      <iframe name="layUiBody" src="/user/user_info.html"></iframe>
+      <iframe name="layUiBody" src="/user/user_avatar.html"></iframe>
     </div>
 
     <div class="layui-footer">
